COMP: Superbuild - Fix typo in CMakeLists.txt - itcl instead of incrTcl
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13689 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -342,7 +342,7 @@ set(teem_DEPENDENCIES vtk)
 set(cmcurl_DEPENDENCIES)
 set(slicer_DEPENDENCIES vtk Insight BatchMake OpenIGTLink teem cmcurl)
 if(Slicer3_USE_KWWIDGETS)
-  list(APPEND slicer_DEPENDENCIES blt incrTcl iwidgets)
+  list(APPEND slicer_DEPENDENCIES blt itcl iwidgets)
 endif()
 
 #------------------------------------------------------------------------------
