COMP: Superbuild - Review dependencies and clean code
-> removed unused External_BLAS.cmake
-> BLAS is provided by CLAPACK

-> Note also that Blt, iwidgets and itcl are build only on linux

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13692 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -322,12 +322,8 @@ if(Slicer3_USE_KWWIDGETS)
   endif()
 endif()
 set(clapack_DEPENDENCIES)
-set(blas_DEPENDENCIES)
 set(numpy_DEPENDENCIES CLAPACK python)
 set(scipy_DEPENDENCIES NUMPY)
-
-#set(lapack_DEPENDENCIES)
-#set(numpy_DEPENDENCIES blas lapack python)
 
 set(vtk_DEPENDENCIES)
 set(CTK_DEPENDENCIES vtk)
@@ -341,9 +337,6 @@ set(OpenIGTLink_DEPENDENCIES)
 set(teem_DEPENDENCIES vtk)
 set(cmcurl_DEPENDENCIES)
 set(slicer_DEPENDENCIES vtk Insight BatchMake OpenIGTLink teem cmcurl)
-if(Slicer3_USE_KWWIDGETS)
-  list(APPEND slicer_DEPENDENCIES blt itcl iwidgets)
-endif()
 
 #------------------------------------------------------------------------------
 # Conditionnaly include ExternalProject Target
@@ -360,7 +353,6 @@ endif()
 if(Slicer3_USE_PYTHON OR Slicer3_USE_PYTHONQT)
   include(External_Python26)
   if(Slicer3_BUILD_NUMPY)
-    #include(External_BLAS)
     include(External_CLAPACK)
     include(External_NUMPY)
     if(Slicer3_BUILD_SCIPY)
@@ -394,7 +386,7 @@ if(Slicer3_USE_KWWIDGETS)
   if(WIN32)
     list(APPEND slicer_DEPENDENCIES tcl KWWidgets)
   else()
-    list(APPEND slicer_DEPENDENCIES tcl tk itcl KWWidgets)
+    list(APPEND slicer_DEPENDENCIES tcl tk blt iwidgets itcl KWWidgets)
   endif()
 endif()
 
