ENH: turned off the install of TestData.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13709 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/BrainlabModule/CMakeLists.txt
+++ b/Modules/BrainlabModule/CMakeLists.txt
@@ -117,8 +117,8 @@ endif(BUILD_TESTING)
 # --------------------------------------------------------------------------
 # Install the testing data
 
-install(DIRECTORY
-  Testing/TestData
-  DESTINATION ${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/Testing COMPONENT Development
-  PATTERN ".svn" EXCLUDE
-  )
+# install(DIRECTORY
+#  Testing/TestData
+#  DESTINATION ${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/Testing COMPONENT Development
+#  PATTERN ".svn" EXCLUDE
+#  )
