BUG: add nodes/managers for ROI, Text, Bidimensional Node, and Spline BUG: modify fiducial node and manager BUG: modify logic and module to work with new nodes and managers
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13721 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/miAnnotation/CMakeLists.txt
+++ b/QTModules/miAnnotation/CMakeLists.txt
@@ -55,6 +55,12 @@ SET(qt_module_SRCS
   ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationStickyNode.h
   ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationTextNode.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationTextNode.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationROINode.cxx
+  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationROINode.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationSplineNode.cxx
+  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationSplineNode.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationBidimensionalNode.cxx
+  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationBidimensionalNode.h
   qSlicermiAnnotationModule.cxx
   qSlicermiAnnotationModule.h
   vtkSlicermiAnnotationModuleLogic.cxx
@@ -77,6 +83,14 @@ SET(qt_module_SRCS
   vtkSlicerAnnotationAngleManager.h
   vtkSlicerAnnotationFiducialManager.cxx
   vtkSlicerAnnotationFiducialManager.h
+  vtkSlicerAnnotationROIManager.cxx
+  vtkSlicerAnnotationROIManager.h
+  vtkSlicerAnnotationSplineManager.cxx
+  vtkSlicerAnnotationSplineManager.h
+  vtkSlicerAnnotationBidimensionalManager.cxx
+  vtkSlicerAnnotationBidimensionalManager.h
+  vtkSlicerAnnotationTextManager.cxx
+  vtkSlicerAnnotationTextManager.h
   # ${CMAKE_CURRENT_SOURCE_DIR}/Widgets/vtkAnnotationAngleWidget.cxx
   # ${CMAKE_CURRENT_SOURCE_DIR}/Widgets/vtkAnnotationAngleWidget.h
   # ${CMAKE_CURRENT_SOURCE_DIR}/Widgets/vtkAnnotationAngleWidgetClass.cxx
