ENH: add new features, which will be available in OpenIGTLink version 2
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13728 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/OpenIGTLinkIF/CMakeLists.txt
+++ b/Modules/OpenIGTLinkIF/CMakeLists.txt
@@ -61,6 +61,14 @@ set(OpenIGTLinkIF_SRCS
   vtkIGTLToMRMLImage.cxx
   vtkIGTLToMRMLPosition.cxx
   vtkMRMLIGTLConnectorNode.cxx
+  vtkIGTLRemoteDataListWindow.cxx
+  vtkMRMLIGTLQueryNode.cxx
+  vtkMRMLImageMetaListNode.cxx
+  vtkIGTLToMRMLImageMetaList.cxx
+#  vtkMRMLIGTLImageMetaListQueryNode.cxx
+  vtkIGTLToMRMLTrackingData.cxx
+  vtkMRMLIGTLTrackingDataBundleNode.cxx
+  vtkIGTLTrackingDataControllerWindow.cxx
 )
 
 # --------------------------------------------------------------------------
