--- a/QTModules/Volumes/CMakeLists.txt
+++ b/QTModules/Volumes/CMakeLists.txt
@@ -1,6 +1,8 @@
 # Module name (usually identique to the directory name)
 SET(qt_module_name "Volumes")
 
+SET(qt_module_title "Volumes")
+
 SET(qt_module_export_directive "Q_SLICER_QTMODULES_VOLUMES_EXPORT")
 
 # Additional directories to include
@@ -55,6 +57,7 @@ SET(qt_module_resources
 
 Slicer3_build_qtmodule(
   NAME ${qt_module_name}
+  TITLE ${qt_module_title}
   EXPORT_DIRECTIVE ${qt_module_export_directive}
   INCLUDE_DIRECTORIES ${qt_module_include_directories}
   SRCS ${qt_module_SRCS}
