--- a/SuperBuild/python_configure_step.cmake.in
+++ b/SuperBuild/python_configure_step.cmake.in
@@ -1,9 +1,12 @@
 
 if(UNIX)
   set(ENV{LD_LIBRARY_PATH} "@CMAKE_CURRENT_BINARY_DIR@/tcl-build/lib:@CMAKE_CURRENT_BINARY_DIR@/python-build/lib")
-  set(ENV{LDFLAGS} "-L@CMAKE_CURRENT_BINARY_DIR@/tcl-build/lib")
-  set(ENV{CPPFLAGS} "-I@CMAKE_CURRENT_BINARY_DIR@/tcl-build/include")
   set(ENV{CXX} "@CMAKE_CXX_COMPILER@")
+  
+  if(Slicer3_USE_KWWIDGETS)
+    set(ENV{LDFLAGS} "-L@CMAKE_CURRENT_BINARY_DIR@/tcl-build/lib")
+    set(ENV{CPPFLAGS} "-I@CMAKE_CURRENT_BINARY_DIR@/tcl-build/include")
+  endif()
   
   EXECUTE_PROCESS( 
     COMMAND sh configure --prefix=@CMAKE_CURRENT_BINARY_DIR@/python-build --enable-shared
