COMP: don't use kwwidgets macro unless kwwidgets is enabled
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13769 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/Java/CMakeLists.txt
+++ b/Applications/CLI/Java/CMakeLists.txt
@@ -23,7 +23,9 @@ if(WIN32 AND CMAKE_CONFIGURATION_TYPES)
   # here, so we are going to have to stick to the value of CMAKE_BUILD_TYPE
   # if it has been set explicitly (by a dashboard for example), or the
   # first value in CMAKE_CONFIGURATION_TYPES (i.e. Debug)/
+if (Slicer3_USE_KWWIDGETS)
   kwwidgets_get_cmake_build_type(build_type)
+endif (Slicer3_USE_KWWIDGETS)
 endif(WIN32 AND CMAKE_CONFIGURATION_TYPES)
 
 #####################
