BUG: On windows, some environment variables were wrongly set for two reasons: A check on vtk.exe was done to find the build type (Debug/Release...) of VTK but vtk.exe is never created with Superbuild. Now we check vtkCommon.dll that is always created A check on Slicer3-real.exe was done to find the build type (Debug/Release) of some dlls, however when KWWidgets is OFF, Slicer3-real.exe is not created, only SlicerQT-real.exe is. The launcher also launch the application SlicerQt-real.exe by default when Slicer3-real.exe doesn't exist.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13772 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -300,12 +300,16 @@ proc launch_SetEnvironment {} {
     
       if {$::env(BUILD) == $::WINDOWS} {
         foreach buildType {"." Debug RelWithDebInfo Release MinSizeRel} {
-          set try "$::Slicer3_HOME/bin/$buildType/Slicer3-real.exe"
-          if { [file exists "$try"] } {
-            set ::Slicer3_REAL $try
+          set slicer3Real "$::Slicer3_HOME/bin/$buildType/Slicer3-real.exe"
+		  set slicerQTReal "$::Slicer3_HOME/bin/$buildType/SlicerQT-real.exe"
+          if { [file exists "$slicer3Real"] } {
+            set ::Slicer3_REAL $slicer3Real
+            set ::BUILD_SUBDIR $buildType
+          } elseif { [file exists "$slicerQTReal"] } {
+			set ::Slicer3_REAL $slicerQTReal
             set ::BUILD_SUBDIR $buildType
           }
-          if { [file exists "@VTK_DIR@/bin/$buildType/vtk.exe"] } {
+          if { [file exists "@VTK_DIR@/bin/$buildType/vtkCommon.dll"] } {
             set ::VTK_BUILD_SUBDIR $buildType
           }
           if { [file exists "@CTK_DIR@/CTK-build/bin/$buildType/CTKCore.dll"] } {
