ENH: Merge Base/QTBase with Base/QTCore
Some QtGUI dependent code was in Base/QTBase (qSlicerWidget,
qSlicerAbstractModuleWidget...) but Base/QTBase is not supposed to have
any QtGUI dependent code.
Moreover, QTBase and QTCore had no striking difference, they should be
merged.
QTBase is then moved into QtCore and QtGUI depending on the dependencies.
qSlicerAbstractModule (non gui) was depending on
qSlicerAbstractModuleWidget (gui), we created an intermediate class:
qSlicerAbstractModuleRepresentation (non gui) to remove the dependency
with GUI code. As the last class share a property with qSlicerWidget
(MRMLScene), we created a base class that contains the property.
ctkSettings is a gui class but is used in qSlicerCoreApplication, we now
handle QSettings in qSlicerCoreApplication and ctkSettings in
qSlicerApplication.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13801 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCLI/CMakeLists.txt
+++ b/Base/QTCLI/CMakeLists.txt
@@ -8,8 +8,10 @@ SET(KIT_export_directive "Q_SLICER_BASE_QTCLI_EXPORT")
 
 # Additional directories to include
 SET(KIT_include_directories
-  ${qSlicerBaseQTBase_SOURCE_DIR}
-  ${qSlicerBaseQTBase_BINARY_DIR}
+  ${qSlicerBaseQTCore_SOURCE_DIR}
+  ${qSlicerBaseQTCore_BINARY_DIR}
+  ${qSlicerBaseQTGUI_SOURCE_DIR}
+  ${qSlicerBaseQTGUI_BINARY_DIR}
   ${ModuleDescriptionParser_SOURCE_DIR}
   ${ModuleDescriptionParser_BINARY_DIR}
   ${MRMLCLI_SOURCE_DIR}
@@ -54,10 +56,10 @@ SET(KIT_resources
 
 # Additional Target libraries (QT libs already included)
 SET(KIT_target_libraries
-  qSlicerBaseQTBase
   qSlicerBaseQTCore
+  qSlicerBaseQTGUI
   qMRMLWidgets # HACK: Added ONLY for qCTKFlowLayout
-  SlicerBaseLogic
+  #SlicerBaseLogic
   ModuleDescriptionParser
   MRMLCLI
   )
