--- a/Base/QTGUI/Testing/CMakeLists.txt
+++ b/Base/QTGUI/Testing/CMakeLists.txt
@@ -1,7 +1,8 @@
 SET(KIT QTGUI)
 SET(CMAKE_TESTDRIVER_BEFORE_TESTMAIN "DEBUG_LEAKS_ENABLE_EXIT_ERROR();" )
 CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
-#   qSlicerCLIExecutableModuleFactoryTest1.cxx
+  qSlicerAbstractModuleWidgetTest1.cxx
+  qSlicerWidgetTest1.cxx
   EXTRA_INCLUDE TestingMacros.h
   )
 
@@ -26,9 +27,10 @@ ENDMACRO( SIMPLE_TEST  )
 # Add Tests
 #
 
-# ADD_TEST( qSlicerCoreApplicationTest1 
+# ADD_TEST( qSlicerCoreApplicationTest1
 #   ${LAUNCH_EXE}
-#   ${QTCore_TESTS} qSlicerCoreApplicationTest1 
+#   ${QTCore_TESTS} qSlicerCoreApplicationTest1
 #   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/SlicerQT )
 
-# SIMPLE_TEST( qSlicerCLIExecutableModuleFactoryTest1 )
+SIMPLE_TEST( qSlicerAbstractModuleWidgetTest1 )
+SIMPLE_TEST( qSlicerWidgetTest1 )
