COMP: Try to add dependency on qSlicerBaseQTCore for miAnnotation module
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13805 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/miAnnotation/CMakeLists.txt
+++ b/QTModules/miAnnotation/CMakeLists.txt
@@ -126,6 +126,7 @@ SET(qt_module_target_libraries
   #CommandLineModule
   #SlicerTractographyDisplay
   #SlicerTractographyFiducialSeeding
+  qSlicerBaseQTCore
   Measurements
   
   )
