ENH: add test framework for viewer
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13808 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/GUI/Testing/CMakeLists.txt
+++ b/Base/GUI/Testing/CMakeLists.txt
@@ -4,6 +4,7 @@ CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   vtkSlicerModelsGUITest1.cxx
   vtkSlicerModuleGUITest1.cxx
   vtkSlicerComponentGUITest1.cxx
+  vtkSlicerViewerTest.cxx
   EXTRA_INCLUDE TestingMacros.h
   )
 
@@ -50,3 +51,4 @@ ENDMACRO( SIMPLE_TEST  )
 SIMPLE_TEST( vtkSlicerModelsGUITest1 )
 SIMPLE_TEST( vtkSlicerModuleGUITest1 )
 SIMPLE_TEST( vtkSlicerComponentGUITest1 )
+SIMPLE_TEST( vtkSlicerViewerTest )
