BUG: Added QTGUI/qSlicerPythonManager and QTCore/qSlicerCorePythonManager
To adapt to the recent layout change in the organization of the directory,
the existing python manager class has been split into two classes.

QTCore/qSlicerPythonManager renamed into QTCore/qSlicerPythonCoreManager
and created QTGUI/qSlicerPythonManager

The new QTGUI/qSlicerPythonManager class is in charge of registering
the decorator associated with QTGUI.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13813 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCore/CMakeLists.txt
+++ b/Base/QTCore/CMakeLists.txt
@@ -70,7 +70,7 @@ SET(KIT_MOC_SRCS
 
 # PythonQt decorator
 IF(Slicer3_USE_PYTHONQT)
-  LIST(APPEND KIT_MOC_SRCS qSlicerBaseQTBasePythonQtDecorators.h)
+  LIST(APPEND KIT_MOC_SRCS qSlicerBaseQTCorePythonQtDecorators.h)
 ENDIF(Slicer3_USE_PYTHONQT)
 
 # Additional Target libraries (QT libs already included)
@@ -96,13 +96,13 @@ IF(Slicer3_USE_PYTHONQT)
     )
   # Sources
   LIST(APPEND KIT_SRCS
-    qSlicerPythonManager.cxx
-    qSlicerPythonManager.h
+    qSlicerCorePythonManager.cxx
+    qSlicerCorePythonManager.h
     )
 
   # Headers that should run through moc
   LIST(APPEND KIT_MOC_SRCS
-    qSlicerPythonManager.h
+    qSlicerCorePythonManager.h
     )
 
 ENDIF(Slicer3_USE_PYTHONQT)
