STYLE: Superbuild - Added missing DEPENDS properties in External_* files
The DEPENDS property is also now consistently added as the last property
of the external project description.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13822 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -309,6 +309,7 @@ configure_file(
 # Establish Target Dependencies based on Selected Options
 #------------------------------------------------------------------------------
 
+set(tcl_DEPENDENCIES)
 set(tk_DEPENDENCIES tcl)
 set(incrTcl_DEPENDENCIES tcl tk)
 set(iwidgets_DEPENDENCIES tcl itcl)
