ENH: add new test that shows how to use slicer/mrml classes together with vtk and qt in standalone test
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13830 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTGUI/Testing/CMakeLists.txt
+++ b/Base/QTGUI/Testing/CMakeLists.txt
@@ -3,6 +3,7 @@ SET(CMAKE_TESTDRIVER_BEFORE_TESTMAIN "DEBUG_LEAKS_ENABLE_EXIT_ERROR();" )
 CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   qSlicerAbstractModuleWidgetTest1.cxx
   qSlicerWidgetTest1.cxx
+  qSlicerWidgetTest2.cxx
   EXTRA_INCLUDE TestingMacros.h
   )
 
@@ -34,3 +35,4 @@ ENDMACRO( SIMPLE_TEST  )
 
 SIMPLE_TEST( qSlicerAbstractModuleWidgetTest1 )
 SIMPLE_TEST( qSlicerWidgetTest1 )
+SIMPLE_TEST( qSlicerWidgetTest2 )
