COMP: QTBaseLibraries and qMRMLWidgets now link against CTK_EXTERNAL_LIBRARIES
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13838 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/CMakeLists.txt
+++ b/Libs/qMRMLWidgets/CMakeLists.txt
@@ -162,6 +162,7 @@ ADD_LIBRARY(${lib_name}
 SET(qMRMLWidgets_LIBRARIES
   ${QT_LIBRARIES}
   ${CTK_LIBRARIES}
+  ${CTK_EXTERNAL_LIBRARIES}
   MRML
   )
 
