COMP: Superbuild - Fix library dirs in NUMPY_configure.cmake.in
On windows, the library are located either in Debug or Release directory.
The CMAKE_CFG_INTDIR is properly set by cmake according to the configuration
being built.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13842 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/NUMPY_configure_step.cmake.in
+++ b/SuperBuild/NUMPY_configure_step.cmake.in
@@ -4,11 +4,11 @@ set(ENV{LD_LIBRARY_PATH} "@CMAKE_CURRENT_BINARY_DIR@/python-build/lib")
 file(WRITE "@NUMPY_binary@/site.cfg"
 "
 [blas]
-library_dirs = @CLAPACK_binary@/BLAS/SRC;@CLAPACK_binary@/CLAPACK-build/F2CLIBS/libf2c
+library_dirs = @CLAPACK_binary@/BLAS/SRC/@CMAKE_CFG_INTDIR@/;@CLAPACK_binary@/F2CLIBS/libf2c/@CMAKE_CFG_INTDIR@/
 libraries = blas,libf2c
 
 [lapack]
-library_dirs = @CLAPACK_binary@/SRC/
+library_dirs = @CLAPACK_binary@/SRC/@CMAKE_CFG_INTDIR@/
 lapack_libs = lapack
 ")
 
